--- a/glsl/test/BUILD
+++ b/glsl/test/BUILD
@@ -12,7 +12,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-load("//glsl:defs.bzl", "glsl_library", "glsl_binary", "glsl_preprocess_binary")
+load(
+    "//glsl:defs.bzl",
+    "glsl_library",
+    "glsl_binary",
+    "glsl_preprocessed_binary",
+)
 
 package(default_visibility = ["//visibility:private"])
 
@@ -38,7 +43,7 @@ glsl_library(
     ],
 )
 
-glsl_preprocess_binary(
+glsl_preprocessed_binary(
     name = "main",
     srcs = ["main.comp"],
     deps = [
